a bunch of slides

--- a/custom/css/foo.scss
+++ b/custom/css/foo.scss
@@ -1,5 +1,8 @@
-.mathFormula {
-    font-size: 100px;
-    text-align: center;
-    color: #222;
+.reveal {
+    .math-formula {
+        font-size: 125%;
+        text-align: center;
+        margin: 20px 0;
+        color: #222;
+    }
 }
