--- a/custom/css/foo.scss
+++ b/custom/css/foo.scss
@@ -37,4 +37,24 @@
         font-size: 50%;
         color: #999;
     }
+
+    .shadow-text {
+        color: #FFF;
+        text-shadow:
+                0 0 1px #000,
+                -1px -1px 2px #000,
+                1px -1px 2px #000,
+                1px 1px 2px #000,
+                -1px 1px 2px #000,
+                -2px -2px 3px #000,
+                -2px 0px 3px #000,
+                -2px 2px 3px #000,
+                0px -2px 3px #000,
+                0px 2px 3px #000,
+                0px 0px 3px #000,
+                2px -2px 3px #000,
+                2px 0px 3px #000,
+                2px 2px 3px #000;
+        display: inline;
+    }
 }
